[package]
name = "aroma_backup_cos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qcos = "0.1.5"
toml = "0.5"
serde = { version = "1.0.137", optional = true, features = ["derive"] }

[features]
default = ["std"]
std = [ "serde" ]
